syntax = "proto3";

package proto.v1;

// import "google/protobuf/any.proto";

option go_package = "./protogen";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}